<resources>
    <string name="app_name">KeyboardApp</string>
    <string name="accessibility_service_label">TextEntry</string>
    <string name="accessibility_service_description">No description.</string>
    <string name="button">RESTART SENTENCE</string>
    <string name="buttonScreen">Take Screenshot</string>
    <string name="switch_ABCD">Switch ABCD</string>
    <string name="Other">Other</string>
    <string name="ah_referencing">AH - Torso referencing</string>
    <string name="zero">0</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="Train">Train</string>
    <string name="regenerate">Re-generate dictionary</string>
    <string name="reentry">Re-entry sentence</string>
    <string name="info">CLick the back button to close the keyboard, click the EditText to open it again.</string>
    <string name="height">Keyboard height (pixels):</string>
    <string name="restart_eye_tracking">Restart Eye Tracking</string>
    <string name="eye_tracking">Eye Tracking</string>
    <string name="_switch">Switch</string>
    <string name="tracking_on">Tracking On</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="switch_scene">Switch scene</string>
    <string name="articulated_hands">ARTICULATED HANDS</string>
    <string name="eye_gaze">EYE GAZE</string>
    <string name="gesture_type">GESTURE TYPE</string>
    <string name="image_plane_pointing">IMAGE-PLANE POINTING</string>
    <string name="oculus_quest">OCULUS QUEST</string>
    <string name="head_gaze">HEAD GAZE</string>
    <string name="show_hide_overlay">Show/Hide overlay</string>
    <string name="switch_leap_offset">Switch Leap Offset</string>
    <string name="manual">Manual</string>
    <string name="default_offset">default</string>
    <string name="exit_app">Exit App</string>
    <string name="new_experiment">New Experiment</string>
    <string name="continue_experiment">Continue Experiment</string>
    <string name="training">Training</string>
    <string name="main_menu">Go to Main Menu</string>
    <string name="max5">Set sentences 5</string>
    <string name="max8">Set sentences 8</string>


    <string name="throw_a_ball">Throw A Ball</string>
</resources>
